Project Selector Frontend finished

--- a/index.html
+++ b/index.html
@@ -50,11 +50,26 @@
         <h3>SPACE</h3>
         <p>Nachvertonung</p>
         <div class="project-selections">
-          <div class="p-selection"></div>
-          <div class="p-selection"></div>
-          <div class="p-selection"></div>
-          <div class="p-selection"></div>
-          <div class="p-selection"></div>
+          <div class="p-selection selectedProject">
+            <div class="cursor-current"></div>
+            <div class="cursor-selection"></div>
+          </div>
+          <div class="p-selection">
+            <div class="cursor-current"></div>
+            <div class="cursor-selection"></div>
+          </div>
+          <div class="p-selection">
+            <div class="cursor-current"></div>
+            <div class="cursor-selection"></div>
+          </div>
+          <div class="p-selection">
+            <div class="cursor-current"></div>
+            <div class="cursor-selection"></div>
+          </div>
+          <div class="p-selection">
+            <div class="cursor-current"></div>
+            <div class="cursor-selection"></div>
+          </div>
         </div>
       </div>
     </section>
