--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style/variablesFonts.css" />
     <link rel="stylesheet" href="style/styleProject.css" />
     <link rel="stylesheet" href="style/styleProjectMobile.css" />
+    <link rel="stylesheet" href="style/darkmode.css" />
     
   </head>
-  <body>
+  <body class="darkmode">
     <nav>
         <ul>
           <li><a href="#">Home</a></li>
@@ -51,7 +52,7 @@
       <div class="project-content">
         <h3>SPACE</h3>
         <p>Nachvertonung</p>
-        <div class="project-selections">
+        <div class="project-selections closed">
           <div class="p-selection selectedProject">
             <div class="cursor-current"></div>
             <div class="cursor-selection"></div>
